some routes has been added

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -457,8 +457,13 @@ nav>ul li:last-child{
     display: inline;;
 }
 
-.district-dropdown {
-    width:40%;
+.formDropDowns{
+    display:flex;
+    justify-content: space-between;
+
+}
+.district-dropdown,.salesType-dropdown,.salesSubtype-dropdown {
+    width:30%;
 }
 .newAd-form button{
     border: 0;
