--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11382,3 +11382,46 @@ nav > ul li:last-child {
   background: #ffed4a;
 }
 
+#edit-images {
+  display: flex;
+  margin: 5px 0 15px 0;
+}
+
+.edit-image-container {
+  position: relative;
+  flex: 1;
+  width: 25%;
+  padding: 2px;
+}
+
+.edit-image-container img {
+  width: 100%;
+  height: 100%;
+}
+
+.img-hover {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.edit-image-container:hover .image {
+  opacity: 0.3;
+}
+
+.edit-image-container:hover .img-hover {
+  opacity: 1;
+}
+
+.img-add-btn {
+  background-color: #009432;
+  color: white;
+  font-size: 16px;
+  padding: 5px 15px;
+}
+
