--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,6 +27,16 @@ section{
     margin-bottom: 25px;
 }
 
+.inner-container{
+    border-bottom: 1px solid #009432;
+}
+.inner-container:last-child{
+    border: 0px;
+}
+.dropdown-item:hover{
+    cursor: pointer;
+}
+
 //Nav
 .title{
    background: #fff;
@@ -71,6 +81,8 @@ nav>ul li button{
 nav>ul li:last-child{
     padding-top:3px;
 }
+
+
 
 
 // main compoenent
@@ -151,7 +163,23 @@ nav>ul li:last-child{
 .map-container{
     display:flex;
     padding-top: 30px;
-    border-bottom: 1px solid #009432;
+    
+}
+
+
+.map{
+    width: 60%;
+    height: 480px;
+}
+
+.map>div{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.map>div>div{
+    height:80% !important;
+    // position: relative !important;
 }
 
 .welcome-message{
@@ -167,21 +195,6 @@ nav>ul li:last-child{
 }
 .welcome-message-title{
     font-weight: bold;
-}
-
-.map{
-    width: 60%;
-    height: 480px;
-}
-
-.map>div{
-    width: 100%;
-    height: 100%;
-}
-.map>div>div{
-    width: 58% !important;
-    height:80% !important;
-    // position: relative !important;
 }
 
 
@@ -213,6 +226,10 @@ nav>ul li:last-child{
     font-size: 1.5rem;
     font-weight: bold;
     margin: 0 45% 15px;
+}
+
+.card-img-top{
+    height: 150px !important;
 }
 
 //footer
@@ -538,3 +555,32 @@ nav>ul li:last-child{
     font-size: 16px;
     padding: 5px 15px;
   }
+
+
+  
+//   statistics
+
+.stat-cont{
+    display: flex;
+}
+.stat-cont>div{
+    flex: 1;
+}
+.stat-cont-div-head{
+    text-align: center;
+    margin: auto;
+    width: fit-content;
+    border-bottom: 1px solid #009432;
+}
+
+.stat-cont-div-subhead{
+    text-align: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-size: 18px;
+}
+
+.stat-cont-div-img{
+    width:100%;
+    padding: 5px;
+}
