loan calculator added

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11517,3 +11517,108 @@ nav > ul li:last-child {
   margin: auto;
 }
 
+#calculator-app-cont {
+  display: flex;
+}
+
+.calc-div {
+  flex: 1;
+  margin: 20px;
+}
+
+.display-div {
+  flex: 1;
+  margin: 20px;
+}
+
+#loan-cal-title {
+  margin: 20px;
+  font-weight: bold;
+}
+
+.MuiSlider-thumb {
+  height: 20px !important;
+  width: 20px !important;
+}
+
+.MuiSlider-rail,
+.MuiSlider-track {
+  height: 10px !important;
+}
+
+.MuiSlider-mark {
+  height: 0px !important;
+}
+
+.calc-labels {
+  float: left;
+  margin-top: 18px;
+  margin-bottom: 0;
+  font-weight: bold;
+}
+
+.calc-input-fields {
+  float: right;
+}
+
+.clearfix::after {
+  content: ".";
+  visibility: hidden;
+  display: block;
+  height: 0;
+  clear: both;
+}
+
+.MuiFormLabel-root {
+  color: #000 !important;
+}
+
+.display > h4,
+.display > h5 {
+  font-weight: bold;
+  display: inline;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0;
+}
+
+.display span {
+  font-size: 20px;
+}
+
+.display span {
+  font-weight: bold;
+  color: #7a6de2;
+}
+
+#loan-quota-form > p {
+  text-align: center;
+}
+
+#loan-quota-form {
+  padding: 5px;
+  background: #efefef;
+}
+
+.loan-name {
+  width: 100% !important;
+}
+
+.loan-input {
+  margin-bottom: 10px !important;
+}
+
+.loan-email {
+  float: left;
+}
+
+.loan-phone {
+  float: right;
+}
+
+.loan-message,
+.quote-submit {
+  width: 100%;
+}
+
