--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -530,6 +530,10 @@ nav>ul li:last-child{
     justify-content: space-between;
 
 }
+.formDropDowns button{
+    width:100%;
+
+}
 .district-dropdown,.salesType-dropdown,.salesSubtype-dropdown {
     width:30%;
 }
